fixed a bug with overflow

--- a/src/scss/drawer.scss
+++ b/src/scss/drawer.scss
@@ -116,7 +116,7 @@ $borders_color: lightgray;
                         line-height: 25px;
                         & span {
                             display: inline-block;
-                            max-width: 80%;
+                            max-width: 70%;
                             word-break: break-all;
                         }
                         & button {
